@@ -1,4 +1,10 @@
 pipeline {
+environment {
+
+        MAVEN_OPTS = '-Xmx512m -XX:MaxPermSize=256m‘
+
+    }
+
     agent {
         docker {
             image 'maven:3-alpine' 
